--- a/restapi/package.json
+++ b/restapi/package.json
@@ -10,15 +10,19 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "@apollo/server": "^4.11.3",
       "@types/body-parser": "^1.19.5",
       "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
+      "apollo-server-express": "^3.13.0",
       "body-parser": "^1.20.3",
       "class-validator": "^0.14.1",
       "cors": "^2.8.5",
       "express": "^4.21.2",
+      "graphql": "^16.10.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
+      "type-graphql": "^2.0.0-rc.2",
       "typeorm": "0.3.20"
    },
    "scripts": {
