--- a/restapi/package.json
+++ b/restapi/package.json
@@ -4,7 +4,6 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "@types/node": "^16.11.10",
       "nodemon": "^3.1.9",
       "ts-node": "10.9.1",
       "typescript": "4.5.2"
@@ -13,20 +12,25 @@
       "@apollo/server": "^4.11.3",
       "@types/body-parser": "^1.19.5",
       "@types/cors": "^2.8.17",
-      "@types/express": "^4.17.21",
       "apollo-server-express": "^3.13.0",
       "body-parser": "^1.20.3",
       "class-validator": "^0.14.1",
       "cors": "^2.8.5",
       "express": "^4.21.2",
       "graphql": "^16.10.0",
+      "http": "^0.0.1-security",
+      "ioredis": "^5.4.2",
+      "node-cron": "^3.0.3",
       "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.13",
+      "redis": "^4.7.0",
+      "reflect-metadata": "^0.1.14",
+      "socket.io": "^4.8.1",
       "type-graphql": "^2.0.0-rc.2",
       "typeorm": "0.3.20"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
+      "server": "ts-node src/server.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    }
 }
